[gd_scene load_steps=10 format=3 uid="uid://cb0u33jttrs3u"]

[ext_resource type="Script" path="res://world/object_scripts/wood_box.gd" id="1_gkro2"]
[ext_resource type="Texture2D" uid="uid://bk82ayru8eqvi" path="res://assets/objects/wood_box_base.tres" id="1_x0tcr"]
[ext_resource type="AudioStream" uid="uid://d1bfnef641hp1" path="res://assets/sounds/sfx/wood_box/Arrastar_Madeira_1.wav" id="3_lmcb6"]
[ext_resource type="Script" path="res://scenes/prefabs/ray.gd" id="4_gf0rs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfenb"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jecg3"]
size = Vector2(20, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_puung"]
size = Vector2(20, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nmr7"]
size = Vector2(20, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwfa7"]
size = Vector2(20, 2)

[node name="WoodBox" type="Area2D"]
position = Vector2(-4, 0)
collision_layer = 8
collision_mask = 3
script = ExtResource("1_gkro2")

[node name="WoodBoxSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_x0tcr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_yfenb")

[node name="PushSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_lmcb6")

[node name="Raycasts" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Up" type="RayCast2D" parent="Raycasts" node_paths=PackedStringArray("opposite")]
target_position = Vector2(0, -14)
collision_mask = 2
collide_with_areas = true
script = ExtResource("4_gf0rs")
opposite = NodePath("../Down")

[node name="Area2D" type="Area2D" parent="Raycasts/Up"]
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Raycasts/Up/Area2D"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_jecg3")
disabled = true

[node name="Down" type="RayCast2D" parent="Raycasts" node_paths=PackedStringArray("opposite")]
target_position = Vector2(0, 14)
collision_mask = 2
collide_with_areas = true
script = ExtResource("4_gf0rs")
opposite = NodePath("../Up")

[node name="Area2D" type="Area2D" parent="Raycasts/Down"]
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Raycasts/Down/Area2D"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_puung")
disabled = true

[node name="Left" type="RayCast2D" parent="Raycasts" node_paths=PackedStringArray("opposite")]
target_position = Vector2(-14, 0)
collision_mask = 2
collide_with_areas = true
script = ExtResource("4_gf0rs")
opposite = NodePath(".")

[node name="Area2D" type="Area2D" parent="Raycasts/Left"]
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Raycasts/Left/Area2D"]
position = Vector2(9, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_7nmr7")
disabled = true

[node name="Right" type="RayCast2D" parent="Raycasts" node_paths=PackedStringArray("opposite")]
target_position = Vector2(14, 0)
collision_mask = 2
collide_with_areas = true
script = ExtResource("4_gf0rs")
opposite = NodePath(".")

[node name="Area2D" type="Area2D" parent="Raycasts/Right"]
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Raycasts/Right/Area2D"]
position = Vector2(-9, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_bwfa7")
disabled = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
